correction size for align out values

--- a/css/coords_in_out.css
+++ b/css/coords_in_out.css
@@ -1,10 +1,10 @@
 .form.get-coord{
-    /* background-color: rgb(68, 54, 54); */
+    background-color: rgb(68, 54, 54);
     border : 10px;
     padding: 10px;
     margin : 10px;
-    width : 480px;
-    height: 340px;
+    width : 580px;
+    height: 440px;
     display      : block;
     border-radius: 30px;
     /* float        : left; */
@@ -16,8 +16,8 @@ div#coord-in{
     border : 10px;
     padding: 10px;
     margin : 10px;
-    width  : 200px;
-    height : 300px;
+    width  : 250px;
+    height : 400px;
     display   : block;
     float: left;
     border-radius: 30px;
@@ -53,10 +53,10 @@ div#coord-out{
     border : 10px;
     padding: 10px;
     margin : 10px;
-    width  : 200px;
-    height : 300px;
-    display   : block;
-    float: left;
+    width  : 250px;
+    height : 400px;
+    display: block;
+    float  : left;
     border-radius: 30px;
 }
 
@@ -71,9 +71,9 @@ div.container{
 .lbl-out{
     margin : 10px;
     border : 10px;
-    padding: 10px 0 10px 0;
+    padding: 10px;
     /* display: inline-flex; */
-    float: inline-start;
+    /* float: inline-start; */
     font-size: 15px;
 }
 
