--- a/css/select_coord.css
+++ b/css/select_coord.css
@@ -3,7 +3,7 @@
     padding: 10px;
     border : 10px;
     margin : 10px;
-    width  : 480px;
+    width  : 580px;
     height : 65px;
     border-radius: 30px;
     display      : block;
